--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/bye7liv.css">
   </head>
   <body>
