--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,7 @@
             <p>
             <p><a href="https://buttondown.email/refer/mistergough" target="_blank">Powered by Buttondown.</a></form></p></form>
         <li>
-        <li><p>The unconference is driven by the Service Design, Social Innovation and Design Leadership programme at Ravensbourne University’s new Institute for Creativity and Technology</p></li>
+        <li><p>Design and Economics launched in 2021 with an unconference supported by Ravensbourne University, London.</p></li>
         <li><p>Design and Economics has been shaped by ideas, guidance and input from Mark Simpkins, Simon Gough, Paul Sternberg, Sally Brazier, Victoria Hands, Jim Coleman, Joanna Boehnert, Tanvi Yardi, Kas Moreno Madrigal, Leonardo Gentili and Zarida Zaman.</p></li>
       </ul>
     </div>
