Updated newsletter subscription

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,10 +26,10 @@
             </ul>
         </li>
         <li><p><form
-            action="https://buttondown.email/api/emails/embed-subscribe/mistergough"
+            action="https://buttondown.email/api/emails/embed-subscribe/designandeconomics"
             method="post"
             target="popupwindow"
-            onsubmit="window.open('https://buttondown.email/mistergough', 'popupwindow')"
+            onsubmit="window.open('https://buttondown.email/designandeconomics', 'popupwindow')"
             class="embeddable-buttondown-form"
           >
             <p><label for="bd-email">Join our mailing list:</label></p>
@@ -37,7 +37,7 @@
             
             <p><input type="submit" value="Subscribe" /></p>
             <p>
-            <p><a href="https://buttondown.email/refer/mistergough" target="_blank">Powered by Buttondown.</a></form></p></form>
+            <p><a href="https://buttondown.email/refer/designandeconomics" target="_blank">Powered by Buttondown.</a></form></p></form>
         <li>
         <li><p>Design and Economics launched in 2021 with an unconference supported by Ravensbourne University, London.</p></li>
         <li><p>Design and Economics has been shaped by ideas, guidance and input from Mark Simpkins, Simon Gough, Paul Sternberg, Sally Brazier, Victoria Hands, Jim Coleman, Joanna Boehnert, Tanvi Yardi, Kas Moreno Madrigal, Leonardo Gentili and Zarida Zaman.</p></li>
