Added conference page.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,14 @@
     <div id="wrapper">
     <div class="header">
       <a href="/" class="site-title"><h1><img src="assets/images/logo.png" alt="Design and Economics logo" /></h1></a>
+      <ul class="nav">
+        <li class="menu">
+          <a href="/">Home</a>
+        </li>
+        <li class="menu">
+          <a href="/conference"></href>Conference 2024</a>
+        </li>
+      </ul>
     </div>
     <div class="content">
       {{ content }}
